Bug 1558357 - Remove unused nsStyleDisplay::mOriginalFloat. r=dbaron

The original float is not needed for layout, and thus there's no need to keep it
around.

This was presumably used by the old style system, but now it doesn't seem
useful, and is always `none`.

Differential Revision: https://phabricator.services.mozilla.com/D34442